// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders other props when passed in 1`] = `
<Icon
  color="blue"
  disabled={true}
  name="arrows"
  opacity={0.5}
  size={2}
  type="solid"
>
  <styled.i
    className="fas fa-arrows fa-2x"
    disabled={true}
    style={
      Object {
        "color": "blue",
        "opacity": 0.5,
      }
    }
  >
    <StyledComponent
      className="fas fa-arrows fa-2x"
      disabled={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "etfHWH",
            "rules": Array [
              "
  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      style={
        Object {
          "color": "blue",
          "opacity": 0.5,
        }
      }
    >
      <i
        className="fas fa-arrows fa-2x sc-bdVaJa etfHWH"
        disabled={true}
        style={
          Object {
            "color": "blue",
            "opacity": 0.5,
          }
        }
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;

exports[`renders successfully 1`] = `
<Icon
  color="#000"
  disabled={false}
  name="user-o"
  opacity={1}
  size={1}
  type="solid"
>
  <styled.i
    className="fas fa-user-o fa-1x"
    disabled={false}
    style={
      Object {
        "color": "#000",
        "opacity": 1,
      }
    }
  >
    <StyledComponent
      className="fas fa-user-o fa-1x"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": false,
            "lastClassName": "eDCunu",
            "rules": Array [
              "
  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.i",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "i",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      style={
        Object {
          "color": "#000",
          "opacity": 1,
        }
      }
    >
      <i
        className="fas fa-user-o fa-1x sc-bdVaJa eDCunu"
        disabled={false}
        style={
          Object {
            "color": "#000",
            "opacity": 1,
          }
        }
      />
    </StyledComponent>
  </styled.i>
</Icon>
`;
